parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     end -> SEMICOLON
Rule 3     literal -> NUMBER
Rule 4     literal -> TRUE
Rule 5     literal -> FALSE
Rule 6     literal -> NORMALSTRING
Rule 7     sequence_literal -> literal COMMA sequence_literal
Rule 8     sequence_literal -> literal
Rule 9     type -> INT
Rule 10    type -> STRING
Rule 11    type -> BOOL
Rule 12    variavel -> NAME
Rule 13    variavel -> NAME LCOLC expression RCOLC
Rule 14    program -> sequence_declaration
Rule 15    sequence_declaration -> declaration sequence_declaration
Rule 16    sequence_declaration -> declaration
Rule 17    declaration -> procedure
Rule 18    declaration -> function
Rule 19    declaration -> var_Declaration
Rule 20    var_Declaration -> type sequence_var_Especification end
Rule 21    list_var_Declaration -> var_Declaration list_var_Declaration
Rule 22    list_var_Declaration -> empty
Rule 23    var_Especification -> NAME LCOLC NUMBER RCOLC
Rule 24    var_Especification -> NAME ASSIGN expression
Rule 25    var_Especification -> NAME
Rule 26    var_Especification -> NAME LCOLC NUMBER RCOLC ASSIGN LBRACE sequence_literal RBRACE
Rule 27    sequence_var_Especification -> var_Especification COMMA sequence_var_Especification
Rule 28    sequence_var_Especification -> var_Especification
Rule 29    parametro -> type NAME
Rule 30    parametro -> type NAME LCOLC RCOLC
Rule 31    list_parametro -> sequence_parametro
Rule 32    list_parametro -> empty
Rule 33    sequence_parametro -> parametro COMMA sequence_parametro
Rule 34    sequence_parametro -> parametro
Rule 35    procedure -> NAME LPAREN list_parametro RPAREN LBRACE block RBRACE
Rule 36    function -> type NAME LPAREN list_parametro RPAREN LBRACE block RBRACE
Rule 37    expression -> expression INTERROGATION expression COLON expression
Rule 38    expression -> MINUS expression
Rule 39    expression -> EXPLAMATION expression
Rule 40    expression -> LPAREN expression RPAREN
Rule 41    expression -> literal
Rule 42    expression -> variavel
Rule 43    expression -> expression MAIOR expression
Rule 44    expression -> expression MENOR expression
Rule 45    expression -> expression MAIOREQUALS expression
Rule 46    expression -> expression MENOREQUALS expression
Rule 47    expression -> expression EQUALS expression
Rule 48    expression -> expression DIFF expression
Rule 49    expression -> expression AND expression
Rule 50    expression -> expression OR expression
Rule 51    expression -> expression PLUS expression
Rule 52    expression -> expression MINUS expression
Rule 53    expression -> expression TIMES expression
Rule 54    expression -> expression DIVIDE expression
Rule 55    expression -> subCall_statement end
Rule 56    list_expression -> sequence_expression
Rule 57    list_expression -> empty
Rule 58    sequence_expression -> expression COMMA sequence_expression
Rule 59    sequence_expression -> expression
Rule 60    assignment -> variavel ASSIGN expression
Rule 61    assignment -> variavel MOD expression
Rule 62    assignment -> variavel SUMEQUALS expression
Rule 63    assignment -> variavel MINUSEQUALS expression
Rule 64    assignment -> variavel TIMESEQUALS expression
Rule 65    assignment -> variavel DIVIDEEQUALS expression
Rule 66    statement -> if_statement
Rule 67    statement -> while_statement
Rule 68    statement -> for_statement
Rule 69    statement -> break_statement
Rule 70    statement -> return_statement
Rule 71    statement -> assignment end
Rule 72    statement -> subCall_statement end
Rule 73    statement -> write_statement end
Rule 74    statement -> read_statement end
Rule 75    list_statement -> statement list_statement
Rule 76    list_statement -> empty
Rule 77    if_statement -> IF LPAREN expression RPAREN LBRACE block RBRACE
Rule 78    if_statement -> IF LPAREN expression RPAREN LBRACE block RBRACE ELSE LBRACE block RBRACE
Rule 79    while_statement -> WHILE LPAREN expression RPAREN LBRACE block RBRACE
Rule 80    for_statement -> FOR LPAREN assignment SEMICOLON expression SEMICOLON assignment RPAREN LBRACE block RBRACE
Rule 81    break_statement -> BREAK end
Rule 82    return_statement -> RETURN end
Rule 83    return_statement -> RETURN expression end
Rule 84    subCall_statement -> NAME LPAREN list_expression RPAREN
Rule 85    write_statement -> WRITE list_expression
Rule 86    read_statement -> READ variavel
Rule 87    block -> list_var_Declaration list_statement

Terminals, with rules where they appear

AND                  : 49
ASSIGN               : 24 26 60
BOOL                 : 11
BREAK                : 81
COLON                : 37
COMMA                : 7 27 33 58
DIFF                 : 48
DIVIDE               : 54
DIVIDEEQUALS         : 65
ELSE                 : 78
EQUALS               : 47
EXPLAMATION          : 39
FALSE                : 5
FOR                  : 80
IF                   : 77 78
INT                  : 9
INTERROGATION        : 37
LBRACE               : 26 35 36 77 78 78 79 80
LCOLC                : 13 23 26 30
LPAREN               : 35 36 40 77 78 79 80 84
MAIOR                : 43
MAIOREQUALS          : 45
MENOR                : 44
MENOREQUALS          : 46
MINUS                : 38 52
MINUSEQUALS          : 63
MOD                  : 61
NAME                 : 12 13 23 24 25 26 29 30 35 36 84
NORMALSTRING         : 6
NUMBER               : 3 23 26
OR                   : 50
PLUS                 : 51
RBRACE               : 26 35 36 77 78 78 79 80
RCOLC                : 13 23 26 30
READ                 : 86
RETURN               : 82 83
RPAREN               : 35 36 40 77 78 79 80 84
SEMICOLON            : 2 80 80
STRING               : 10
SUMEQUALS            : 62
TIMES                : 53
TIMESEQUALS          : 64
TRUE                 : 4
WHILE                : 79
WRITE                : 85
error                : 

Nonterminals, with rules where they appear

assignment           : 71 80 80
block                : 35 36 77 78 78 79 80
break_statement      : 69
declaration          : 15 16
empty                : 22 32 57 76
end                  : 20 55 71 72 73 74 81 82 83
expression           : 13 24 37 37 37 38 39 40 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 58 59 60 61 62 63 64 65 77 78 79 80 83
for_statement        : 68
function             : 18
if_statement         : 66
list_expression      : 84 85
list_parametro       : 35 36
list_statement       : 75 87
list_var_Declaration : 21 87
literal              : 7 8 41
parametro            : 33 34
procedure            : 17
program              : 0
read_statement       : 74
return_statement     : 70
sequence_declaration : 14 15
sequence_expression  : 56 58
sequence_literal     : 7 26
sequence_parametro   : 31 33
sequence_var_Especification : 20 27
statement            : 75
subCall_statement    : 55 72
type                 : 20 29 30 36
var_Declaration      : 19 21
var_Especification   : 27 28
variavel             : 42 60 61 62 63 64 65 86
while_statement      : 67
write_statement      : 73

Parsing method: LALR

state 0

    (0) S' -> . program
    (14) program -> . sequence_declaration
    (15) sequence_declaration -> . declaration sequence_declaration
    (16) sequence_declaration -> . declaration
    (17) declaration -> . procedure
    (18) declaration -> . function
    (19) declaration -> . var_Declaration
    (35) procedure -> . NAME LPAREN list_parametro RPAREN LBRACE block RBRACE
    (36) function -> . type NAME LPAREN list_parametro RPAREN LBRACE block RBRACE
    (20) var_Declaration -> . type sequence_var_Especification end
    (9) type -> . INT
    (10) type -> . STRING
    (11) type -> . BOOL

    NAME            shift and go to state 7
    INT             shift and go to state 9
    STRING          shift and go to state 10
    BOOL            shift and go to state 11

    program                        shift and go to state 1
    sequence_declaration           shift and go to state 2
    declaration                    shift and go to state 3
    procedure                      shift and go to state 4
    function                       shift and go to state 5
    var_Declaration                shift and go to state 6
    type                           shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (14) program -> sequence_declaration .

    $end            reduce using rule 14 (program -> sequence_declaration .)


state 3

    (15) sequence_declaration -> declaration . sequence_declaration
    (16) sequence_declaration -> declaration .
    (15) sequence_declaration -> . declaration sequence_declaration
    (16) sequence_declaration -> . declaration
    (17) declaration -> . procedure
    (18) declaration -> . function
    (19) declaration -> . var_Declaration
    (35) procedure -> . NAME LPAREN list_parametro RPAREN LBRACE block RBRACE
    (36) function -> . type NAME LPAREN list_parametro RPAREN LBRACE block RBRACE
    (20) var_Declaration -> . type sequence_var_Especification end
    (9) type -> . INT
    (10) type -> . STRING
    (11) type -> . BOOL

    $end            reduce using rule 16 (sequence_declaration -> declaration .)
    NAME            shift and go to state 7
    INT             shift and go to state 9
    STRING          shift and go to state 10
    BOOL            shift and go to state 11

    declaration                    shift and go to state 3
    sequence_declaration           shift and go to state 12
    procedure                      shift and go to state 4
    function                       shift and go to state 5
    var_Declaration                shift and go to state 6
    type                           shift and go to state 8

state 4

    (17) declaration -> procedure .

    NAME            reduce using rule 17 (declaration -> procedure .)
    INT             reduce using rule 17 (declaration -> procedure .)
    STRING          reduce using rule 17 (declaration -> procedure .)
    BOOL            reduce using rule 17 (declaration -> procedure .)
    $end            reduce using rule 17 (declaration -> procedure .)


state 5

    (18) declaration -> function .

    NAME            reduce using rule 18 (declaration -> function .)
    INT             reduce using rule 18 (declaration -> function .)
    STRING          reduce using rule 18 (declaration -> function .)
    BOOL            reduce using rule 18 (declaration -> function .)
    $end            reduce using rule 18 (declaration -> function .)


state 6

    (19) declaration -> var_Declaration .

    NAME            reduce using rule 19 (declaration -> var_Declaration .)
    INT             reduce using rule 19 (declaration -> var_Declaration .)
    STRING          reduce using rule 19 (declaration -> var_Declaration .)
    BOOL            reduce using rule 19 (declaration -> var_Declaration .)
    $end            reduce using rule 19 (declaration -> var_Declaration .)


state 7

    (35) procedure -> NAME . LPAREN list_parametro RPAREN LBRACE block RBRACE

    LPAREN          shift and go to state 13


state 8

    (36) function -> type . NAME LPAREN list_parametro RPAREN LBRACE block RBRACE
    (20) var_Declaration -> type . sequence_var_Especification end
    (27) sequence_var_Especification -> . var_Especification COMMA sequence_var_Especification
    (28) sequence_var_Especification -> . var_Especification
    (23) var_Especification -> . NAME LCOLC NUMBER RCOLC
    (24) var_Especification -> . NAME ASSIGN expression
    (25) var_Especification -> . NAME
    (26) var_Especification -> . NAME LCOLC NUMBER RCOLC ASSIGN LBRACE sequence_literal RBRACE

    NAME            shift and go to state 14

    sequence_var_Especification    shift and go to state 15
    var_Especification             shift and go to state 16

state 9

    (9) type -> INT .

    NAME            reduce using rule 9 (type -> INT .)


state 10

    (10) type -> STRING .

    NAME            reduce using rule 10 (type -> STRING .)


state 11

    (11) type -> BOOL .

    NAME            reduce using rule 11 (type -> BOOL .)


state 12

    (15) sequence_declaration -> declaration sequence_declaration .

    $end            reduce using rule 15 (sequence_declaration -> declaration sequence_declaration .)


state 13

    (35) procedure -> NAME LPAREN . list_parametro RPAREN LBRACE block RBRACE
    (31) list_parametro -> . sequence_parametro
    (32) list_parametro -> . empty
    (33) sequence_parametro -> . parametro COMMA sequence_parametro
    (34) sequence_parametro -> . parametro
    (1) empty -> .
    (29) parametro -> . type NAME
    (30) parametro -> . type NAME LCOLC RCOLC
    (9) type -> . INT
    (10) type -> . STRING
    (11) type -> . BOOL

    RPAREN          reduce using rule 1 (empty -> .)
    INT             shift and go to state 9
    STRING          shift and go to state 10
    BOOL            shift and go to state 11

    list_parametro                 shift and go to state 17
    sequence_parametro             shift and go to state 18
    empty                          shift and go to state 19
    parametro                      shift and go to state 20
    type                           shift and go to state 21

state 14

    (36) function -> type NAME . LPAREN list_parametro RPAREN LBRACE block RBRACE
    (23) var_Especification -> NAME . LCOLC NUMBER RCOLC
    (24) var_Especification -> NAME . ASSIGN expression
    (25) var_Especification -> NAME .
    (26) var_Especification -> NAME . LCOLC NUMBER RCOLC ASSIGN LBRACE sequence_literal RBRACE

    LPAREN          shift and go to state 22
    LCOLC           shift and go to state 23
    ASSIGN          shift and go to state 24
    COMMA           reduce using rule 25 (var_Especification -> NAME .)
    SEMICOLON       reduce using rule 25 (var_Especification -> NAME .)


state 15

    (20) var_Declaration -> type sequence_var_Especification . end
    (2) end -> . SEMICOLON

    SEMICOLON       shift and go to state 26

    end                            shift and go to state 25

state 16

    (27) sequence_var_Especification -> var_Especification . COMMA sequence_var_Especification
    (28) sequence_var_Especification -> var_Especification .

    COMMA           shift and go to state 27
    SEMICOLON       reduce using rule 28 (sequence_var_Especification -> var_Especification .)


state 17

    (35) procedure -> NAME LPAREN list_parametro . RPAREN LBRACE block RBRACE

    RPAREN          shift and go to state 28


state 18

    (31) list_parametro -> sequence_parametro .

    RPAREN          reduce using rule 31 (list_parametro -> sequence_parametro .)


state 19

    (32) list_parametro -> empty .

    RPAREN          reduce using rule 32 (list_parametro -> empty .)


state 20

    (33) sequence_parametro -> parametro . COMMA sequence_parametro
    (34) sequence_parametro -> parametro .

    COMMA           shift and go to state 29
    RPAREN          reduce using rule 34 (sequence_parametro -> parametro .)


state 21

    (29) parametro -> type . NAME
    (30) parametro -> type . NAME LCOLC RCOLC

    NAME            shift and go to state 30


state 22

    (36) function -> type NAME LPAREN . list_parametro RPAREN LBRACE block RBRACE
    (31) list_parametro -> . sequence_parametro
    (32) list_parametro -> . empty
    (33) sequence_parametro -> . parametro COMMA sequence_parametro
    (34) sequence_parametro -> . parametro
    (1) empty -> .
    (29) parametro -> . type NAME
    (30) parametro -> . type NAME LCOLC RCOLC
    (9) type -> . INT
    (10) type -> . STRING
    (11) type -> . BOOL

    RPAREN          reduce using rule 1 (empty -> .)
    INT             shift and go to state 9
    STRING          shift and go to state 10
    BOOL            shift and go to state 11

    type                           shift and go to state 21
    list_parametro                 shift and go to state 31
    sequence_parametro             shift and go to state 18
    empty                          shift and go to state 19
    parametro                      shift and go to state 20

state 23

    (23) var_Especification -> NAME LCOLC . NUMBER RCOLC
    (26) var_Especification -> NAME LCOLC . NUMBER RCOLC ASSIGN LBRACE sequence_literal RBRACE

    NUMBER          shift and go to state 32


state 24

    (24) var_Especification -> NAME ASSIGN . expression
    (37) expression -> . expression INTERROGATION expression COLON expression
    (38) expression -> . MINUS expression
    (39) expression -> . EXPLAMATION expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . literal
    (42) expression -> . variavel
    (43) expression -> . expression MAIOR expression
    (44) expression -> . expression MENOR expression
    (45) expression -> . expression MAIOREQUALS expression
    (46) expression -> . expression MENOREQUALS expression
    (47) expression -> . expression EQUALS expression
    (48) expression -> . expression DIFF expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression PLUS expression
    (52) expression -> . expression MINUS expression
    (53) expression -> . expression TIMES expression
    (54) expression -> . expression DIVIDE expression
    (55) expression -> . subCall_statement end
    (3) literal -> . NUMBER
    (4) literal -> . TRUE
    (5) literal -> . FALSE
    (6) literal -> . NORMALSTRING
    (12) variavel -> . NAME
    (13) variavel -> . NAME LCOLC expression RCOLC
    (84) subCall_statement -> . NAME LPAREN list_expression RPAREN

    MINUS           shift and go to state 35
    EXPLAMATION     shift and go to state 36
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NORMALSTRING    shift and go to state 44
    NAME            shift and go to state 33

    expression                     shift and go to state 34
    literal                        shift and go to state 38
    variavel                       shift and go to state 39
    subCall_statement              shift and go to state 40

state 25

    (20) var_Declaration -> type sequence_var_Especification end .

    NAME            reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    INT             reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    STRING          reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    BOOL            reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    $end            reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    IF              reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    WHILE           reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    FOR             reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    BREAK           reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    RETURN          reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    WRITE           reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    READ            reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)
    RBRACE          reduce using rule 20 (var_Declaration -> type sequence_var_Especification end .)


state 26

    (2) end -> SEMICOLON .

    NAME            reduce using rule 2 (end -> SEMICOLON .)
    INT             reduce using rule 2 (end -> SEMICOLON .)
    STRING          reduce using rule 2 (end -> SEMICOLON .)
    BOOL            reduce using rule 2 (end -> SEMICOLON .)
    $end            reduce using rule 2 (end -> SEMICOLON .)
    IF              reduce using rule 2 (end -> SEMICOLON .)
    WHILE           reduce using rule 2 (end -> SEMICOLON .)
    FOR             reduce using rule 2 (end -> SEMICOLON .)
    BREAK           reduce using rule 2 (end -> SEMICOLON .)
    RETURN          reduce using rule 2 (end -> SEMICOLON .)
    WRITE           reduce using rule 2 (end -> SEMICOLON .)
    READ            reduce using rule 2 (end -> SEMICOLON .)
    RBRACE          reduce using rule 2 (end -> SEMICOLON .)
    INTERROGATION   reduce using rule 2 (end -> SEMICOLON .)
    MAIOR           reduce using rule 2 (end -> SEMICOLON .)
    MENOR           reduce using rule 2 (end -> SEMICOLON .)
    MAIOREQUALS     reduce using rule 2 (end -> SEMICOLON .)
    MENOREQUALS     reduce using rule 2 (end -> SEMICOLON .)
    EQUALS          reduce using rule 2 (end -> SEMICOLON .)
    DIFF            reduce using rule 2 (end -> SEMICOLON .)
    AND             reduce using rule 2 (end -> SEMICOLON .)
    OR              reduce using rule 2 (end -> SEMICOLON .)
    PLUS            reduce using rule 2 (end -> SEMICOLON .)
    MINUS           reduce using rule 2 (end -> SEMICOLON .)
    TIMES           reduce using rule 2 (end -> SEMICOLON .)
    DIVIDE          reduce using rule 2 (end -> SEMICOLON .)
    COMMA           reduce using rule 2 (end -> SEMICOLON .)
    SEMICOLON       reduce using rule 2 (end -> SEMICOLON .)
    RPAREN          reduce using rule 2 (end -> SEMICOLON .)
    RCOLC           reduce using rule 2 (end -> SEMICOLON .)
    COLON           reduce using rule 2 (end -> SEMICOLON .)


state 27

    (27) sequence_var_Especification -> var_Especification COMMA . sequence_var_Especification
    (27) sequence_var_Especification -> . var_Especification COMMA sequence_var_Especification
    (28) sequence_var_Especification -> . var_Especification
    (23) var_Especification -> . NAME LCOLC NUMBER RCOLC
    (24) var_Especification -> . NAME ASSIGN expression
    (25) var_Especification -> . NAME
    (26) var_Especification -> . NAME LCOLC NUMBER RCOLC ASSIGN LBRACE sequence_literal RBRACE

    NAME            shift and go to state 46

    var_Especification             shift and go to state 16
    sequence_var_Especification    shift and go to state 45

state 28

    (35) procedure -> NAME LPAREN list_parametro RPAREN . LBRACE block RBRACE

    LBRACE          shift and go to state 47


state 29

    (33) sequence_parametro -> parametro COMMA . sequence_parametro
    (33) sequence_parametro -> . parametro COMMA sequence_parametro
    (34) sequence_parametro -> . parametro
    (29) parametro -> . type NAME
    (30) parametro -> . type NAME LCOLC RCOLC
    (9) type -> . INT
    (10) type -> . STRING
    (11) type -> . BOOL

    INT             shift and go to state 9
    STRING          shift and go to state 10
    BOOL            shift and go to state 11

    parametro                      shift and go to state 20
    sequence_parametro             shift and go to state 48
    type                           shift and go to state 21

state 30

    (29) parametro -> type NAME .
    (30) parametro -> type NAME . LCOLC RCOLC

    COMMA           reduce using rule 29 (parametro -> type NAME .)
    RPAREN          reduce using rule 29 (parametro -> type NAME .)
    LCOLC           shift and go to state 49


state 31

    (36) function -> type NAME LPAREN list_parametro . RPAREN LBRACE block RBRACE

    RPAREN          shift and go to state 50


state 32

    (23) var_Especification -> NAME LCOLC NUMBER . RCOLC
    (26) var_Especification -> NAME LCOLC NUMBER . RCOLC ASSIGN LBRACE sequence_literal RBRACE

    RCOLC           shift and go to state 51


state 33

    (12) variavel -> NAME .
    (13) variavel -> NAME . LCOLC expression RCOLC
    (84) subCall_statement -> NAME . LPAREN list_expression RPAREN

    INTERROGATION   reduce using rule 12 (variavel -> NAME .)
    MAIOR           reduce using rule 12 (variavel -> NAME .)
    MENOR           reduce using rule 12 (variavel -> NAME .)
    MAIOREQUALS     reduce using rule 12 (variavel -> NAME .)
    MENOREQUALS     reduce using rule 12 (variavel -> NAME .)
    EQUALS          reduce using rule 12 (variavel -> NAME .)
    DIFF            reduce using rule 12 (variavel -> NAME .)
    AND             reduce using rule 12 (variavel -> NAME .)
    OR              reduce using rule 12 (variavel -> NAME .)
    PLUS            reduce using rule 12 (variavel -> NAME .)
    MINUS           reduce using rule 12 (variavel -> NAME .)
    TIMES           reduce using rule 12 (variavel -> NAME .)
    DIVIDE          reduce using rule 12 (variavel -> NAME .)
    COMMA           reduce using rule 12 (variavel -> NAME .)
    SEMICOLON       reduce using rule 12 (variavel -> NAME .)
    RPAREN          reduce using rule 12 (variavel -> NAME .)
    RCOLC           reduce using rule 12 (variavel -> NAME .)
    COLON           reduce using rule 12 (variavel -> NAME .)
    LCOLC           shift and go to state 52
    LPAREN          shift and go to state 53


state 34

    (24) var_Especification -> NAME ASSIGN expression .
    (37) expression -> expression . INTERROGATION expression COLON expression
    (43) expression -> expression . MAIOR expression
    (44) expression -> expression . MENOR expression
    (45) expression -> expression . MAIOREQUALS expression
    (46) expression -> expression . MENOREQUALS expression
    (47) expression -> expression . EQUALS expression
    (48) expression -> expression . DIFF expression
    (49) expression -> expression . AND expression
    (50) expression -> expression . OR expression
    (51) expression -> expression . PLUS expression
    (52) expression -> expression . MINUS expression
    (53) expression -> expression . TIMES expression
    (54) expression -> expression . DIVIDE expression

    COMMA           reduce using rule 24 (var_Especification -> NAME ASSIGN expression .)
    SEMICOLON       reduce using rule 24 (var_Especification -> NAME ASSIGN expression .)
    INTERROGATION   shift and go to state 54
    MAIOR           shift and go to state 55
    MENOR           shift and go to state 56
    MAIOREQUALS     shift and go to state 57
    MENOREQUALS     shift and go to state 58
    EQUALS          shift and go to state 59
    DIFF            shift and go to state 60
    AND             shift and go to state 61
    OR              shift and go to state 62
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    TIMES           shift and go to state 65
    DIVIDE          shift and go to state 66


state 35

    (38) expression -> MINUS . expression
    (37) expression -> . expression INTERROGATION expression COLON expression
    (38) expression -> . MINUS expression
    (39) expression -> . EXPLAMATION expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . literal
    (42) expression -> . variavel
    (43) expression -> . expression MAIOR expression
    (44) expression -> . expression MENOR expression
    (45) expression -> . expression MAIOREQUALS expression
    (46) expression -> . expression MENOREQUALS expression
    (47) expression -> . expression EQUALS expression
    (48) expression -> . expression DIFF expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression PLUS expression
    (52) expression -> . expression MINUS expression
    (53) expression -> . expression TIMES expression
    (54) expression -> . expression DIVIDE expression
    (55) expression -> . subCall_statement end
    (3) literal -> . NUMBER
    (4) literal -> . TRUE
    (5) literal -> . FALSE
    (6) literal -> . NORMALSTRING
    (12) variavel -> . NAME
    (13) variavel -> . NAME LCOLC expression RCOLC
    (84) subCall_statement -> . NAME LPAREN list_expression RPAREN

    MINUS           shift and go to state 35
    EXPLAMATION     shift and go to state 36
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NORMALSTRING    shift and go to state 44
    NAME            shift and go to state 33

    expression                     shift and go to state 67
    literal                        shift and go to state 38
    variavel                       shift and go to state 39
    subCall_statement              shift and go to state 40

state 36

    (39) expression -> EXPLAMATION . expression
    (37) expression -> . expression INTERROGATION expression COLON expression
    (38) expression -> . MINUS expression
    (39) expression -> . EXPLAMATION expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . literal
    (42) expression -> . variavel
    (43) expression -> . expression MAIOR expression
    (44) expression -> . expression MENOR expression
    (45) expression -> . expression MAIOREQUALS expression
    (46) expression -> . expression MENOREQUALS expression
    (47) expression -> . expression EQUALS expression
    (48) expression -> . expression DIFF expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression PLUS expression
    (52) expression -> . expression MINUS expression
    (53) expression -> . expression TIMES expression
    (54) expression -> . expression DIVIDE expression
    (55) expression -> . subCall_statement end
    (3) literal -> . NUMBER
    (4) literal -> . TRUE
    (5) literal -> . FALSE
    (6) literal -> . NORMALSTRING
    (12) variavel -> . NAME
    (13) variavel -> . NAME LCOLC expression RCOLC
    (84) subCall_statement -> . NAME LPAREN list_expression RPAREN

    MINUS           shift and go to state 35
    EXPLAMATION     shift and go to state 36
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NORMALSTRING    shift and go to state 44
    NAME            shift and go to state 33

    expression                     shift and go to state 68
    literal                        shift and go to state 38
    variavel                       shift and go to state 39
    subCall_statement              shift and go to state 40

state 37

    (40) expression -> LPAREN . expression RPAREN
    (37) expression -> . expression INTERROGATION expression COLON expression
    (38) expression -> . MINUS expression
    (39) expression -> . EXPLAMATION expression
    (40) expression -> . LPAREN expression RPAREN
    (41) expression -> . literal
    (42) expression -> . variavel
    (43) expression -> . expression MAIOR expression
    (44) expression -> . expression MENOR expression
    (45) expression -> . expression MAIOREQUALS expression
    (46) expression -> . expression MENOREQUALS expression
    (47) expression -> . expression EQUALS expression
    (48) expression -> . expression DIFF expression
    (49) expression -> . expression AND expression
    (50) expression -> . expression OR expression
    (51) expression -> . expression PLUS expression
    (52) expression -> . expression MINUS expression
    (53) expression -> . expression TIMES expression
    (54) expression -> . expression DIVIDE expression
    (55) expression -> . subCall_statement end
    (3) literal -> . NUMBER
    (4) literal -> . TRUE
    (5) literal -> . FALSE
    (6) literal -> . NORMALSTRING
    (12) variavel -> . NAME
    (13) variavel -> . NAME LCOLC expression RCOLC
    (84) subCall_statement -> . NAME LPAREN list_expression RPAREN

    MINUS           shift and go to state 35
    EXPLAMATION     shift and go to state 36
    LPAREN          shift and go to state 37
    NUMBER          shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    NORMALSTRING    shift and go to state 44
    NAME            shift and go to state 33

    expression                     shift and go to state 69
    literal                        shift and go to state 38
    variavel                       shift and go to state 39
    subCall_statement              shift and go to state 40

state 38

    (41) expression -> literal .

    INTERROGATION   reduce using rule 41 (expression -> literal .)
    MAIOR           reduce using rule 41 (expression -> literal .)
    MENOR           reduce using rule 41 (expression -> literal .)
    MAIOREQUALS     reduce using rule 41 (expression -> literal .)
    MENOREQUALS     reduce using rule 41 (expression -> literal .)
    EQUALS          reduce using rule 41 (expression -> literal .)
    DIFF            reduce using rule 41 (expression -> literal .)
    AND             reduce using rule 41 (expression -> literal .)
    OR              reduce using rule 41 (expression -> literal .)
    PLUS            reduce using rule 41 (expression -> literal .)
    MINUS           reduce using rule 41 (expression -> literal .)
    TIMES           reduce using rule 41 (expression -> literal .)
    DIVIDE          reduce using rule 41 (expression -> literal .)
    COMMA           reduce using rule 41 (expression -> literal .)
    SEMICOLON       reduce using rule 41 (expression -> literal .)
    RPAREN          reduce using rule 41 (expression -> literal .)
    RCOLC           reduce using rule 41 (expression -> literal .)
    COLON           reduce using rule 41 (expression -> literal .)


state 39

    (42) expression -> variavel .

    INTERROGATION   reduce using rule 42 (expression -> variavel .)
    MAIOR           reduce using rule 42 (expression -> variavel .)
    MENOR           reduce using rule 42 (expression -> variavel .)
    MAIOREQUALS     reduce using rule 42 (expression -> variavel .)
    MENOREQUALS     reduce using rule 42 (expression -> variavel .)
    EQUALS          reduce using rule 42 (expression -> variavel .)
    DIFF            reduce using rule 42 (expression -> variavel .)
    AND             reduce using rule 42 (expression -> variavel .)
    OR              reduce using rule 42 (expression -> variavel .)
    PLUS            reduce using rule 42 (expression -> variavel .)
    MINUS           reduce using rule 42 (expression -> variavel .)
    TIMES           reduce using rule 42 (expression -> variavel .)
    DIVIDE          reduce using rule 42 (expression -> variavel .)
    COMMA           reduce using rule 42 (expression -> variavel .)
    SEMICOLON       reduce using rule 42 (expression -> variavel .)
    RPAREN          reduce using rule 42 (expression -> variavel .)
    RCOLC           reduce using rule 42 (expression -> variavel .)
    COLON           reduce using rule 42 (expression -> variavel .)


state 40

    (55) expression -> subCall_statement . end
    (2) end -> . SEMICOLON

    SEMICOLON       shift and go to state 26

    end                            shift and go to state 70

state 41

    (3) literal -> NUMBER .

    INTERROGATION   reduce using rule 3 (literal -> NUMBER .)
    MAIOR           reduce using rule 3 (literal -> NUMBER .)
    MENOR           reduce using rule 3 (literal -> NUMBER .)
    MAIOREQUALS     reduce using rule 3 (literal -> NUMBER .)
    MENOREQUALS     reduce using rule 3 (literal -> NUMBER .)
    EQUALS          reduce using rule 3 (literal -> NUMBER .)
    DIFF            reduce using rule 3 (literal -> NUMBER .)
    AND             reduce using rule 3 (literal -> NUMBER .)
    OR              reduce using rule 3 (literal -> NUMBER .)
    PLUS            reduce using rule 3 (literal -> NUMBER .)
    MINUS           reduce using rule 3 (literal -> NUMBER .)
    TIMES           reduce using rule 3 (literal -> NUMBER .)
    DIVIDE          reduce using rule 3 (literal -> NUMBER .)
    COMMA           reduce using rule 3 (literal -> NUMBER .)
    SEMICOLON       reduce using rule 3 (literal -> NUMBER .)
    RPAREN          reduce using rule 3 (literal -> NUMBER .)
    RCOLC           reduce using rule 3 (literal -> NUMBER .)
    COLON           reduce using rule 3 (literal -> NUMBER .)
    RBRACE          reduce using rule 3 (literal -> NUMBER .)


state 42

    (4) literal -> TRUE .
